SIGSEV in ccl::ImageManager::device_free_image #48377

Closed
opened 2016-05-08 19:00:09 +02:00 by Ralf Hölzemer · 5 comments

System Information
system-info.txt

Blender Version
Broken: f5930759a6 - sorry Brecht! :)
Worked: 68e856da03

Short description of error
Blender crashes when a Color Mix node has a float Texture connected to one input and nothing on the other input and the mix factor is set to the empty input.

This is an obscure one and it took me way too long to figure out.

Some preconditions which are required to trigger the bug: (AFAIKT)

  • There has to be an active 3dview with the vieport shading mode set to "Rendered"
  • The image that is connected to the Mix node has to be a float image
  • The other input of the Mix node must be unconnected

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • open mix_node_bug2.blend
  • set the 3dview shading mode to Rendered
  • slide the Mix node's factor up to 1

crash -> backtrace.txt

The crash doesn't happen when the image is a byte image

  • open the file again
  • connect the second image texture to the first input of the Mix node instead of the float one
  • set the 3dview shading mode to Rendered
  • slide the Mix node's factor up to 1

The crash also doesn't happen when the second input is connected to a byte image

  • open the file again
  • connect the second image texture to the second input of the Mix node
  • set the 3dview shading mode to Rendered
  • slide the Mix node's factor up to 1
**System Information** [system-info.txt](https://archive.blender.org/developer/F309794/system-info.txt) **Blender Version** Broken: f5930759a6 - sorry Brecht! :) Worked: 68e856da03 **Short description of error** Blender crashes when a Color Mix node has a float Texture connected to one input and nothing on the other input and the mix factor is set to the empty input. This is an obscure one and it took me way too long to figure out. **Some preconditions which are required to trigger the bug: (AFAIKT)** - There has to be an active 3dview with the vieport shading mode set to "Rendered" - The image that is connected to the Mix node has to be a float image - The other input of the Mix node must be unconnected **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - open [mix_node_bug2.blend](https://archive.blender.org/developer/F309796/mix_node_bug2.blend) - set the 3dview shading mode to Rendered - slide the Mix node's factor up to 1 crash -> [backtrace.txt](https://archive.blender.org/developer/F309797/backtrace.txt) The crash doesn't happen when the image is a byte image - open the file again - connect the second image texture to the **first input of the Mix node instead of the float one** - set the 3dview shading mode to Rendered - slide the Mix node's factor up to 1 The crash also doesn't happen when the second input is connected to a byte image - open the file again - connect the second image texture to the **second input of the Mix node** - set the 3dview shading mode to Rendered - slide the Mix node's factor up to 1
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @cheleb

Added subscriber: @cheleb

This issue was referenced by e362b04c43

This issue was referenced by e362b04c43d23ccc4ec14e26d481c283705ef9cf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@daad318936

This issue was referenced by blender/cycles@daad31893647468d36b6c1ba5e8d5627e52bd75e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48377
No description provided.