Fix T48377: Cycles crash removing float image texture node during viewport render.